# agentic-finance-analysis

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  app.py  cli.py  mise.toml  prompt.py  pyproject.toml
agent_fin/: __init__.py
agent_fin/api/: __init__.py  main.py
agent_fin/core/: __init__.py
agent_fin/core/agents/: analysis_agent.py  master_agent.py  research_agent.py
agent_fin/core/data/collectors/: alpha_vantage.py  financial_modeling_prep.py  yahoo_finance.py
agent_fin/core/data/processors/: data_processor.py
agent_fin/core/data/scrapers/: news_scraper.py
agent_fin/core/rag/: retriever.py
agent_fin/core/tools/: __init__.py  analysis_tools.py  orchestration_tools.py  research_tools.py
agent_fin/core/utils/: config.py
agent_fin/core/vector_db/: embeddings.py  faiss_manager.py
agent_fin/frontend/: package-lock.json  package.json  tailwind.config.js
agent_fin/frontend/public/: index.html  manifest.json
agent_fin/frontend/src/: App.css  App.tsx
agent_fin/frontend/src/types/: index.ts
examples/: advanced_usage.py  basic_usage.py
src/agents/: __init__.py  analysis_agent.py  master_agent.py  research_agent.py
src/dashboard/: __init__.py  main_app.py
src/dashboard/components/: __init__.py
src/data/collectors/: alpha_vantage.py  financial_modeling_prep.py  yahoo_finance.py
src/data/processors/: data_processor.py
src/data/scrapers/: news_scraper.py
src/rag/: retriever.py
src/tools/: research_tools.py
src/utils/: config.py  helpers.py
src/vector_db/: embeddings.py  faiss_manager.py
tests/: test_system.py
(+8 files in other folders)
